# SRL_final

devel/: .catkin  .rosinstall  local_setup.sh
devel/include/sense_glove_test/: glove.h
devel/lib/beginner_tutorials/: listener  talker
devel/lib/pkgconfig/: beginner_tutorials.pc  sense_glove_test.pc  srl_final.pc
devel/lib/python3/dist-packages/sense_glove_test/msg/: __init__.py  _glove.py
devel/lib/sense_glove_test/: glove_pub_test_1  glove_sub_test_1  glove_sub_test_2  glove_sub_test_3
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/common-lisp/ros/sense_glove_test/msg/: _package.lisp  _package_glove.lisp  glove.lisp  sense_glove_test-msg.asd
devel/share/gennodejs/ros/sense_glove_test/msg/: _index.js  glove.js
devel/share/roseus/ros/beginner_tutorials/: manifest.l
devel/share/roseus/ros/sense_glove_test/: manifest.l
devel/share/roseus/ros/sense_glove_test/msg/: glove.l
devel/share/roseus/ros/srl_final/: manifest.l
devel/share/sense_glove_test/cmake/: sense_glove_test-msg-extras.cmake  sense_glove_test-msg-paths.cmake  sense_glove_testConfig.cmake
devel/share/srl_final/cmake/: srl_final-msg-extras.cmake  srl_final-msg-paths.cmake  srl_finalConfig.cmake
src/beginner_tutorials/: CMakeLists.txt
src/beginner_tutorials/launch/: turtlemimic.launch
src/beginner_tutorials/src/: glove_ros_test_1.cpp  pub_test_1.cpp  sub_test_1.cpp
src/sense_glove_test/: CMakeLists.txt  package.xml
src/sense_glove_test/SenseCom/Linux/: sessionLog.txt
src/sense_glove_test/include/sense_glove_test/: Fingers.h  SG_ThumperCmd.h
src/sense_glove_test/msg/: glove.msg
src/sense_glove_test/src/: glove_pub_test_1.cpp  glove_sub_test_1.cpp  glove_sub_test_2.cpp  glove_sub_test_3.cpp  grammer_test.cpp
src/srl_final/: CMakeLists.txt
src/srl_final/script/: 1_final_eye_tracker_and_depth_camera.py  2_final_trans_all.py  3_final_SRL_follow_eye.py  Orbec_Test.py  SRL_Trans_v1.py  SRL_follow_position_v1.py  SRL_sim_EMG_v1.py  trans_all_sub.py  utils.py
src/srl_final/src/: 2_final_trans_all.cpp  2_final_trans_all_backup.cpp  T265_1_sim.cpp  group_discussion_pub.cpp  group_discussion_srl_command.cpp  group_discussion_sub.cpp  group_discussion_t265_no1_sim.cpp  group_discussion_t265_no2_sim.cpp  group_discussion_trans_all_sim.cpp
